Update profile image to a video in index.html.

--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
                     <div class="card-started" id="home-card"> 
                         <div class="profile"> 
                             <div class="slide" style="background-image: url(&quot;images/bg.jpg&quot;);"></div>                             
-                            <div class="image"> 
-                                <img src="images/pulkitpic.jpg" alt=""> 
-                            </div>                             
+                                <div class="image">
+                                <video src="pulkitboat.mp4" autoplay loop></video>
+                            </div>
+
                             <div class="subtitle subtitle-typed">AI Product Management</div>                             
                             <div class="title">Pulkit Shukla</div>                             
                             <div class="social"> <a target="_blank" rel="noreferrer" href="https://dribbble.com/"><span class="fa fa-dribbble"></span></a> <a target="_blank" rel="noreferrer" href="https://twitter.com/"><span class="fa fa-twitter"></span></a> <a target="_blank" rel="noreferrer" href="https://github.com/"><span class="fa fa-github"></span></a> <a target="_blank" rel="noreferrer" href="https://www.spotify.com/"><span class="fa fa-spotify"></span></a> <a target="_blank" rel="noreferrer" href="https://stackoverflow.com/"><span class="fa fa-stack-overflow"></span></a> 
