profile pic changed to vid

--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
         <link rel="stylesheet" href="css/magnific-popup.css"> 
         <link rel="stylesheet" href="css/animate.css"> 
         <link rel="stylesheet" href="css/gradient.css"> 
-        <title>Ryan - vCard / Resume / CV Template</title>         
+        <title>Pulkit Shukla</title>
+        <style>
+            .profile .vid{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 40px;
+                overflow: hidden;
+                width: 50%;
+                margin: 0 auto;
+            }
+            .profile .vid video {
+                width: 100%;
+                height: auto;
+                display: block;
+                z-index: 2;
+            }
+            </style>
         <link rel="shortcut icon" href="images/favicons/favicon.ico"> 
         <link rel="stylesheet" href="css/new-skin/new-skin.css"> 
         <link rel="stylesheet" href="css/demos/demo-2-colors.css"> 
@@ -93,9 +110,9 @@
                 <div class="container opened layout-rounded-style minimal-icons-style" data-animation-in="fadeInLeft" data-animation-out="fadeOutLeft"> 
                     <header class="header"> 
                         <div class="profile"> 
-                            <div class="title">Ryan Adlard</div>                             
+                            <div class="title">Pulkit Shukla</div>                             
                             <div class="subtitle subtitle-typed"> 
-                                <div class="subtitle subtitle-typed">Fre</div>                                 
+                                <div class="subtitle subtitle-typed">AI | Innovation | RPA </div>                                 
                             </div>                             
                         </div>                         <a href="#" class="menu-btn"><span></span></a> 
                         <div class="top-menu menu-minimal"> 
@@ -116,8 +133,8 @@
                     <div class="card-started" id="home-card"> 
                         <div class="profile"> 
                             <div class="slide" style="background-image: url(&quot;images/bg.jpg&quot;);"></div>                             
-                                <div class="image">
-                                <video src="pulkitboat.mp4" autoplay loop controls muted playsinline></video>
+                            <div class="vid">
+                                <video src="/images/pulkitboat.mp4" autoplay loop controls muted playsinline></video>
                             </div>
 
                             <div class="subtitle subtitle-typed">AI Product Management</div>                             
@@ -341,11 +358,12 @@ I love to talk with you about our unique.</p>
                                             </div>                                             
                                             <div class="user"> 
                                                 <div class="img"> 
-                                                    <img src="images/man1.jpg" alt="Ryan Adlard"> 
+                                                    <img src="images/man1.jpg" alt="Pulkit Shukla"> 
                                                 </div>                                                 
                                                 <div class="info"> 
-                                                    <div class="name">Ryan Adlard</div>                                                     
-                                                    <div class="company">Web Designer</div>                                                     
+
+                                                    <div class="name">Pulkit Shukla</div>                                                     
+                                                    <div class="company">Innovator</div>                                                     
                                                 </div>                                                 
                                                 <div class="clear"></div>                                                 
                                             </div>                                             
